added newest project to website changed color

--- a/src/Components/Bottombar/Bottombar.css
+++ b/src/Components/Bottombar/Bottombar.css
@@ -1,5 +1,5 @@
 .bottom-bar {
-    background-color: #000000; /* Background color of the bottom bar */
+    background-color: #1338BE; /* Background color of the bottom bar */
     color: #fff; /* Text color of the bottom bar */
     padding: 15px 7%; /* Padding around the content */
     position: fixed; /* Fix the bottom bar at the bottom of the viewport */
